Changed .gitignore to ignore all instances of "output" dir
It was not taking [processing/**/output/], so I made it just
[processing/]. I

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Processing output files
-processing/*/output/*
+# I could not get it to match this pattern:
+# 	processing/**/output/
+# So for now it's all directories called output wherever
+# they occur...
+output/
